syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.grpc.example.gen";
option java_outer_classname = "FileSyncProto";

package sync;

// The file-sync service definition.
service File {
  rpc SyncFile (SyncRequest) returns (SyncResponse) {}
}

// The request message containing the user's name.
message SyncRequest {
  string userName = 1;
}

message SyncResponse {
  repeated FileInfo fileInfo = 1;
}

// The response message containing the file information
message FileInfo {
  string fileName = 1;
  bytes fileBytes = 2;
  bool isDirectory = 3;
  repeated FileInfo fileInfoChild = 4;
}